v.0.1.4

- the installer now checks for some required extensions (like GD, CURL, SimpleXML, DOM)
- better compatibility for some server configurations
- bugfixes & enhancements


v.0.1.3

Installer
- allow installing of unstable dev version
- add comments to .htaccess, at beginning and end of our block
- bugfixes & enhancements


v.0.1.2

Updater
- fix for displaying relevant release information for Homestead update


v.0.1.1

Updater
- added basic updater to update Homestead or the installed modules (the modules need to be at least at version 0.1.1 for the version-select-dropdown to work)

Installer
- added instructions about changing the domain


v.0.1.0

- initial release